2006-10-26  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Enclose structure conversion functions with HAVE_<<STRUCT NAME>>,
	  so that Unix-specific structures don't break the Win32 build.

2006-10-26  Jonathan Pryor  <jonpryor@vt.edu>

	* create-native-map.exe: Remove.  Just grab a new copy whenever we need to
	  refresh map.[ch].
	* Makefile.am: Remove `update-create-native-map' target, and just have the
	  `refresh' target grab the latest create-native-map.exe program.
	* map.c: Flush (remove fallback to <inttypes.h> constants).

2006-10-26  Jonathan Pryor  <jonpryor@vt.edu>

	* create-native-map.exe: Update; Adds support for integral limit fallback.
	* map.c: Flush (adds integral limits fallback, so that if G_MININT8 doesn't
	  exist we can fallback sanely instead of breaking the build).

2006-10-26  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Add "mph.h" to the generated code for map.c, so that
	  EOVERFLOW is defined on Win32.
	* map.c: Flush (adds #include "mph.h").

2006-10-25  Wade berrier  <wberrier@novell.com>

	* Makefile.am: remove map-icalls.h so make dist succeeds

2006-10-24  Jonathan Pryor  <jonpryor@vt.edu>

	* dirent.c, errno.c, fcntl.c, fstab.c, grp.c, macros.c, pwd.c, signal.c, 
	  stdio.c, stdlib.c, string.c, sys-mman.c, sys-sendfile.c, sys-stat.c, 
	  sys-statvfs.c, sys-time.c, sys-xattr.c syslog.c, time.c, unistd.c, 
	  utime.c: Remove structure definitions, and use the
	  create-native-map generated definitions within map.h.  Update function
	  prototypes to match current map.h declarations.
	* map.c, map.h: Flush (current create-native-map output).
	* mph.h: Don't include "map-icalls.h"; "icalls" are now in map.h.
	* create-native-map.exe: Added; cached version of create-native-map.exe
	  used to update map.c, map.h.  (create-native-map.exe source within
	  mono-tools/create-native-map.)
	* Makefile.am: Added update-create-native-map target to update 
	  create-native-map.exe using pkg-config & the create-native-map.pc package. 